--- a/style.css
+++ b/style.css
@@ -1,10 +1,6 @@
-.flex {
-  background-color: #00c7ce;
-  height: 50vh;
-  padding: 10px;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-.flex > div {
-  background-color: #fff;
-  margin: 5px;
-  font-size: 30px;
-}
+
