--- a/style.css
+++ b/style.css
@@ -2,5 +2,69 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  
 }
 
+header {
+  width: 100%;
+  background-color: #ff00ff;
+  display: flex;
+  justify-content: flex-end;
+  padding: 30px 20px;
+
+}
+
+header > div {
+  height: 70px;
+  flex-basis: 140px;
+  margin: 0 10px;
+  background-color: #fbb3ff;;
+}
+
+header > div:first-child {
+  margin-right: auto;
+}
+
+main {
+  display: flex;
+  justify-content: center;
+}
+
+.container1 {
+  width: 300px;
+  background-color: #d8ffb6;
+}
+
+.container2 {
+  max-width: 700px;
+  padding: 20px;
+  background-color: #00b522;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  flex-grow: 1;
+}
+
+.container2 > div {
+  background-color: #fff75a;
+  height: 130px;
+  margin: 10px;
+  flex-basis: 200px;
+}
+
+footer {
+  width: 100%;
+  background-color: #52a1ff;;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 20px;
+}
+
+footer > div {
+  height: 40px;
+  background-color: #b6e7ff;
+  flex-basis: 45%;
+  margin: 10px;
+}
